# fileapi-py

./: .env.sample  .gitignore  README.md  justfile  pyproject.toml  requirements.txt
src/fileapi/: __init__.py  async_fileapi.py  fileapi.py  storage_options.py
tests/: __init__.py  file_system_tester.py  test_gcs.py  test_local.py
