[project]
name = "fileapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Parth Patel", email = "parth.p@mendel.ai" }]
requires-python = ">=3.10"
dependencies = [
    "fsspec>=2025.2.0"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fsspec>=2025.2.0",
    "gcsfs>=2025.2.0",
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "python-dotenv>=1.0.1",
]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
