[project]
name = "fileapi"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Parth Patel", email = "parthspatel.nj@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "fsspec>=2025.2.0",
    "pydantic>=2.11.1",
]


[tool.uv]
dev-dependencies = [
    "fsspec>=2025.2.0",
    "gcsfs>=2025.2.0",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.5",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fileapi"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]

ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]


[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
